# sobel_filter

./: LICENSE  README.md
C++/: CMakeLists.txt  README.md
C++/Cuda/: CMakeLists.txt
C++/Cuda/include/: utils.cuh  utils.inl
C++/Cuda/src/: sobel_filter_CUDA.cpp  utils.cu
C++/Simple/: CMakeLists.txt
C++/Simple/include/: utils.hpp  utils.inl
C++/Simple/src/: sobel_filter_simple.cpp  utils.cpp
C++/Threads/: CMakeLists.txt
C++/Threads/include/: utils.hpp  utils.inl
C++/Threads/src/: sobel_filter_threads.cpp  utils.cpp
Python/: README.md  filter_sobel.ipynb
